Added a skeleton for the lexer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,10 @@
+cmake_minimum_required(VERSION 3.16)
 project(lispy_stuff)
 
-add_executable(main src/main.cpp)
+set(HEADER_FILES src/include/lex.hpp)
+set(SOURCE_FILES src/main.cpp)
+
+
+add_executable(main ${SOURCE_FILES} ${HEADER_FILES})
+
+target_include_directories(main PRIVATE src/include/)
