Change workflow to create a build directory

--- a/.woodpecker/workflow.yaml
+++ b/.woodpecker/workflow.yaml
@@ -7,7 +7,7 @@ steps:
     image: gcc:latest
     commands: # we probably shouldn't install cmake every time
       - apt update && apt install -y cmake
-      - cd build
+      - mkdir -p build/ && cd build
       - cmake ..
       - make
   - name: test
