Fixed workflow to use the correct path for the resulting binary

--- a/.woodpecker/workflow.yaml
+++ b/.woodpecker/workflow.yaml
@@ -14,5 +14,5 @@ steps:
     image: ubuntu
     commands:
       # TODO: Probably make actual tests at some point
-      - echo "(print 42)" | ./main
+      - echo "(print 42)" | ./build/main
   # TODO: add publish step, when we're at a working state.
